// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SummarySection AllOutcomesSummarySection renders BaseSummarySection with all outcome types 1`] = `
<DocumentFragment>
  <div
    class="summary-section"
  >
    <h2>
      Summary
    </h2>
    <mock-outcomesummarybar
      alloutcometypes="fail,pass,inapplicable"
      iconstyleinverted=""
      outcomestats="[object Object]"
    />
  </div>
</DocumentFragment>
`;

exports[`SummarySection AllOutcomesSummarySection renders BaseSummarySection with all outcome types: OutcomeSummaryBar props 1`] = `
{
  "allOutcomeTypes": [
    "fail",
    "pass",
    "inapplicable",
  ],
  "iconStyleInverted": true,
  "outcomeStats": {
    "fail": 0,
    "inapplicable": 3,
    "incomplete": 0,
    "pass": 0,
    "review": 0,
  },
}
`;

exports[`SummarySection BaseSummarySection: failure only 1`] = `
<DocumentFragment>
  <div
    class="summary-section"
  >
    <h2>
      Summary
    </h2>
    <mock-outcomesummarybar
      alloutcometypes="pass"
      iconstyleinverted=""
      outcomestats="[object Object]"
    />
  </div>
</DocumentFragment>
`;

exports[`SummarySection BaseSummarySection: failure only: OutcomeSummaryBar props 1`] = `
{
  "allOutcomeTypes": [
    "pass",
  ],
  "iconStyleInverted": true,
  "outcomeStats": {
    "fail": 3,
    "inapplicable": 0,
    "incomplete": 0,
    "pass": 0,
    "review": 0,
  },
}
`;

exports[`SummarySection BaseSummarySection: failures + not applicable + passes 1`] = `
<DocumentFragment>
  <div
    class="summary-section"
  >
    <h2>
      Summary
    </h2>
    <mock-outcomesummarybar
      alloutcometypes="pass"
      iconstyleinverted=""
      outcomestats="[object Object]"
    />
  </div>
</DocumentFragment>
`;

exports[`SummarySection BaseSummarySection: failures + not applicable + passes: OutcomeSummaryBar props 1`] = `
{
  "allOutcomeTypes": [
    "pass",
  ],
  "iconStyleInverted": true,
  "outcomeStats": {
    "fail": 3,
    "inapplicable": 3,
    "incomplete": 0,
    "pass": 2,
    "review": 0,
  },
}
`;

exports[`SummarySection BaseSummarySection: failures + not applicable only 1`] = `
<DocumentFragment>
  <div
    class="summary-section"
  >
    <h2>
      Summary
    </h2>
    <mock-outcomesummarybar
      alloutcometypes="pass"
      iconstyleinverted=""
      outcomestats="[object Object]"
    />
  </div>
</DocumentFragment>
`;

exports[`SummarySection BaseSummarySection: failures + not applicable only: OutcomeSummaryBar props 1`] = `
{
  "allOutcomeTypes": [
    "pass",
  ],
  "iconStyleInverted": true,
  "outcomeStats": {
    "fail": 3,
    "inapplicable": 3,
    "incomplete": 0,
    "pass": 0,
    "review": 0,
  },
}
`;

exports[`SummarySection BaseSummarySection: failures + passes only 1`] = `
<DocumentFragment>
  <div
    class="summary-section"
  >
    <h2>
      Summary
    </h2>
    <mock-outcomesummarybar
      alloutcometypes="pass"
      iconstyleinverted=""
      outcomestats="[object Object]"
    />
  </div>
</DocumentFragment>
`;

exports[`SummarySection BaseSummarySection: failures + passes only: OutcomeSummaryBar props 1`] = `
{
  "allOutcomeTypes": [
    "pass",
  ],
  "iconStyleInverted": true,
  "outcomeStats": {
    "fail": 3,
    "inapplicable": 0,
    "incomplete": 0,
    "pass": 2,
    "review": 0,
  },
}
`;

exports[`SummarySection BaseSummarySection: not applicable + passes only 1`] = `
<DocumentFragment>
  <div
    class="summary-section"
  >
    <h2>
      Summary
    </h2>
    <mock-outcomesummarybar
      alloutcometypes="pass"
      iconstyleinverted=""
      outcomestats="[object Object]"
    />
  </div>
</DocumentFragment>
`;

exports[`SummarySection BaseSummarySection: not applicable + passes only: OutcomeSummaryBar props 1`] = `
{
  "allOutcomeTypes": [
    "pass",
  ],
  "iconStyleInverted": true,
  "outcomeStats": {
    "fail": 0,
    "inapplicable": 3,
    "incomplete": 0,
    "pass": 2,
    "review": 0,
  },
}
`;

exports[`SummarySection BaseSummarySection: not applicable only 1`] = `
<DocumentFragment>
  <div
    class="summary-section"
  >
    <h2>
      Summary
    </h2>
    <mock-outcomesummarybar
      alloutcometypes="pass"
      iconstyleinverted=""
      outcomestats="[object Object]"
    />
  </div>
</DocumentFragment>
`;

exports[`SummarySection BaseSummarySection: not applicable only: OutcomeSummaryBar props 1`] = `
{
  "allOutcomeTypes": [
    "pass",
  ],
  "iconStyleInverted": true,
  "outcomeStats": {
    "fail": 0,
    "inapplicable": 3,
    "incomplete": 0,
    "pass": 0,
    "review": 0,
  },
}
`;

exports[`SummarySection BaseSummarySection: passes only 1`] = `
<DocumentFragment>
  <div
    class="summary-section"
  >
    <h2>
      Summary
    </h2>
    <mock-outcomesummarybar
      alloutcometypes="pass"
      iconstyleinverted=""
      outcomestats="[object Object]"
    />
  </div>
</DocumentFragment>
`;

exports[`SummarySection BaseSummarySection: passes only: OutcomeSummaryBar props 1`] = `
{
  "allOutcomeTypes": [
    "pass",
  ],
  "iconStyleInverted": true,
  "outcomeStats": {
    "fail": 0,
    "inapplicable": 0,
    "incomplete": 0,
    "pass": 2,
    "review": 0,
  },
}
`;

exports[`SummarySection PassFailSummarySection: %s renders BaseSummarySection with only pass and failed outcome types 1`] = `
<DocumentFragment>
  <div
    class="summary-section"
  >
    <h2>
      Summary
    </h2>
    <mock-outcomesummarybar
      alloutcometypes="fail,pass"
      iconstyleinverted=""
      outcomestats="[object Object]"
    />
  </div>
</DocumentFragment>
`;

exports[`SummarySection PassFailSummarySection: %s renders BaseSummarySection with only pass and failed outcome types: OutcomeSummaryBar props 1`] = `
{
  "allOutcomeTypes": [
    "fail",
    "pass",
  ],
  "iconStyleInverted": true,
  "outcomeStats": {
    "fail": 0,
    "inapplicable": 3,
    "incomplete": 0,
    "pass": 0,
    "review": 0,
  },
}
`;
